--- a/templates/users.html
+++ b/templates/users.html
@@ -28,6 +28,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('database_manager') }}">
+                            <i class="fas fa-code me-2"></i>数据库管理
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="{{ url_for('users') }}">
                             <i class="fas fa-users me-2"></i>用户管理
                         </a>
